edited htm page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="jumbotron">
 			<div class="content">
 				<div class="text1">Hello, my name is</div>
-				<div class="text2">Reda Yachou</div>
+				<div class="text2">abderrahme</div>
 				<div class="text3">
 					And I'm a
 					<span class="typing"></span>
